# SharpShot

./: .prettierrc  README.md  package-lock.json  package.json  vite.config.ts
scripts/: release.py
src/: App.vue  baseComponents.ts  main.ts  types.ts  vite-env.d.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/assets/styles/: main.css
src/components/: CaptureScaleCard.vue  HotkeyCard.vue  MonitorSelectCard.vue  SavePathCard.vue  SettingsDialog.vue
src/components/base/: BaseDialog.vue  BaseToast.vue
src/composables/: useSoundSettings.ts  useTheme.ts  useToast.ts  useVersion.ts
