[package]
name = "sharpshot"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "sharpshot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
screenshots = "0.8"
image = { version = "0.24.9", features = ["png"] }
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"

